bash.yaml
---
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: bash-deployment
spec:
  replicas: 4
  selector:
    matchLabels:
      app: bash
  template:
    metadata:
      labels:
        app: bash
    spec:
      containers:
      - image: frickler24/mybash
        name: bash-container
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: bash-service
  namespace: default
spec:
  type: NodePort
  selector:
    app: bash
  ports:
  - protocol: TCP
    nodePort: 30444
    port: 8000
    targetPort: 80
