phpngx.yaml
---
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: phpngx-deployment
spec:
  replicas: 16
  selector:
    matchLabels:
      app: phpngx
  template:
    metadata:
      labels:
        app: phpngx
    spec:
      containers:
      - image: frickler24/phpngx
        name: phpngx-deployment
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: phpngx-service
  namespace: default
spec:
  type: NodePort
  selector:
    app: phpngx
  ports:
  - protocol: TCP
    nodePort: 30666
    port: 80
    targetPort: 80
