ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: whoami-service
spec:
  rules:
  - http:
      paths:
        - path: /
          backend:
            serviceName: whoami-service
            servicePort: 80
